Updation of APIs