@@ -33,7 +33,7 @@ import org.springframework.data.elasticsearch.core.SearchShardStatistics;
 import org.springframework.data.elasticsearch.core.TotalHitsRelation;
 import org.springframework.data.elasticsearch.core.suggest.response.Suggest;
 
-import javax.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotNull;
 
 class ProductServiceTest {
 
@@ -156,7 +156,7 @@ class ProductServiceTest {
 
         assertNotNull(result);
         assertEquals(1, result.productNames().size());
-        ProductNameGetVm productNameGetVm = result.productNames().getFirst();
+        ProductNameGetVm productNameGetVm = result.productNames().get(0);
         assertEquals("Test Product", productNameGetVm.name());
 
         verify(elasticsearchOperations).search(any(NativeQuery.class), eq(Product.class));
